# DataAnalysisRecipes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
book/: _config.yml  _toc.yml  intro.md
scripts/: convert.py
tests/: test_convert.py
